--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
+*csv filter=lfs diff=lfs merge=lfs -text
+*pdf filter=lfs diff=lfs merge=lfs -text
+*pptx filter=lfs diff=lfs merge=lfs -text
 /LICENSE filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
